# FerrisCodec

./: Cargo.toml  README.md
crates/ferris-cli/: Cargo.toml
crates/ferris-cli/src/: main.rs
crates/ferris-codec/: Cargo.toml
crates/ferris-codec/src/: lib.rs  registry.rs  traits.rs
crates/ferris-core/: Cargo.toml
crates/ferris-core/src/: error.rs  frame.rs  lib.rs  packet.rs  timebase.rs
crates/ferris-filter/: Cargo.toml
crates/ferris-filter/src/: graph.rs  lib.rs
crates/ferris-format/: Cargo.toml
crates/ferris-format/src/: demux.rs  lib.rs  mux.rs  probe.rs
crates/ferris-io/: Cargo.toml
crates/ferris-io/src/: lib.rs  seek.rs  sink.rs  source.rs
docs/: ARCHITECTURE.md  ROADMAP.md
samples/: logo.ivf
